--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         app:paddingHorizontal="12dp"
         app:paddingVertical="8dp"
         app:deleteButton="false"
+        app:deleteButtonImage="@mipmap/img_delete"
         app:textSize="12dp"
         />
 
