--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,40 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="15dp"
     android:orientation="vertical"
+    android:paddingHorizontal="15dp"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:textSize="20dp"
-        android:text="搜索历史"/>
+        android:text="搜索历史"
+        android:textSize="20dp" />
 
     <com.kongzue.stacklabelview.StackLabel
         android:id="@+id/stackLabelView"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        app:textColor="#e6000000"
+        app:deleteButton="false"
+        app:deleteButtonImage="@mipmap/img_delete"
         app:itemMargin="4dp"
         app:paddingHorizontal="12dp"
         app:paddingVertical="8dp"
-        app:deleteButton="false"
-        app:deleteButtonImage="@mipmap/img_delete"
-        app:textSize="12dp"
-        />
+        app:textColor="#e6000000"
+        app:textSize="12dp" />
 
     <Switch
         android:id="@+id/switchDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="删除模式 "
-        android:textColor="@color/colorPrimary"
         android:layout_gravity="right"
-        android:layout_marginRight="5dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="删除模式 "
+        android:textColor="@color/colorPrimary" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/edit_maxNum"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="最大可选数量"
+            android:inputType="number"
+            android:textSize="14dp" />
+
+        <Switch
+            android:id="@+id/switchSelect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="选择模式 "
+            android:textColor="@color/colorPrimary" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,13 +73,15 @@
             android:id="@+id/edit_add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:hint="添加标签"
+            android:textSize="14dp" />
 
         <Button
             android:id="@+id/btn_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="添加"/>
+            android:text="添加" />
 
     </LinearLayout>
 
