--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,4 +85,68 @@
 
     </LinearLayout>
 
+    <com.kongzue.stacklabelview.StackLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:itemMargin="4dp"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="110dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:background="#FFD4D4"
+            android:text="文本1" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:background="#FDFFB8"
+            android:text="文本2" />
+
+        <TextView
+            android:layout_width="130dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:background="#D3F1FF"
+            android:text="文本3" />
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:background="#FFFCD6"
+            android:text="文本4" />
+
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:background="#FFD4E3"
+            android:text="文本5" />
+
+        <TextView
+            android:layout_width="110dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:background="#C9FFE5"
+            android:text="文本6" />
+
+        <!--子布局-->
+
+    </com.kongzue.stacklabelview.StackLayout>
+
 </LinearLayout>
