--- a/stacklabelview/src/main/res/values/attr.xml
+++ b/stacklabelview/src/main/res/values/attr.xml
@@ -13,6 +13,7 @@
 
         <attr name="selectMode" format="boolean" />
         <attr name="selectBackground" format="reference" />
+        <attr name="selectTextColor" format="color" />
         <attr name="maxSelectNum" format="integer" />
     </declare-styleable>
 </resources>
