--- a/stacklabelview/src/main/res/values/attr.xml
+++ b/stacklabelview/src/main/res/values/attr.xml
@@ -18,5 +18,7 @@
         <attr name="selectTextColor" format="color" />
         <attr name="maxSelectNum" format="integer" />
         <attr name="minSelectNum" format="integer" />
+
+        <attr name="labels" format="string" />
     </declare-styleable>
 </resources>
