--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="搜索历史"
+        android:text="StackView"
         android:textSize="20dp" />
 
     <com.kongzue.stacklabelview.StackLabel
         android:id="@+id/stackLabelView"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         app:deleteButton="false"
         app:deleteButtonImage="@mipmap/img_delete"
         app:itemMargin="4dp"
@@ -87,59 +87,60 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="StackLayout"
+        android:textSize="20dp" />
+
     <com.kongzue.stacklabelview.StackLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         app:itemMargin="4dp">
 
-        <TextView
+        <RelativeLayout
             android:layout_width="110dp"
             android:layout_height="40dp"
             android:background="#FFD4D4"
             android:gravity="center"
-            android:padding="10dp"
-            android:text="文本1" />
+            android:padding="10dp"/>
 
-        <TextView
+        <RelativeLayout
             android:layout_width="120dp"
             android:layout_height="40dp"
             android:background="#FDFFB8"
             android:gravity="center"
-            android:padding="10dp"
-            android:text="文本2" />
+            android:padding="10dp" />
 
-        <TextView
+        <RelativeLayout
             android:layout_width="130dp"
             android:layout_height="40dp"
             android:background="#D3F1FF"
             android:gravity="center"
-            android:padding="10dp"
-            android:text="文本3" />
+            android:padding="10dp"/>
 
-        <TextView
+        <RelativeLayout
             android:layout_width="90dp"
             android:layout_height="40dp"
             android:background="#FFFCD6"
             android:gravity="center"
-            android:padding="10dp"
-            android:text="文本4" />
+            android:padding="10dp"/>
 
-        <TextView
+        <RelativeLayout
             android:layout_width="80dp"
             android:layout_height="40dp"
             android:background="#FFD4E3"
             android:gravity="center"
-            android:padding="10dp"
-            android:text="文本5" />
+            android:padding="10dp"/>
 
-        <TextView
+        <RelativeLayout
             android:layout_width="110dp"
             android:layout_height="40dp"
             android:background="#C9FFE5"
             android:gravity="center"
-            android:padding="10dp"
-            android:text="文本6" />
+            android:padding="10dp" />
 
         <!--子布局-->
 
